# FinalAssignment

./: dict.py  funkcje_analizy_danych.py  main.py  skrypt.ipynb  test.py
src/: setup.cfg
src/analiza/: __init__.py  funkcje_analizy_danych.py  main.py  saved_dictionary.pkl  test.py  wczytaj.py
testy/: test_wczytywanie.py
