[metadata]
name = analiza_zaleznosci
description = package for classes
author = Jedrzej Olkowski
license = BSD-3-Clause

[options]
packages = find:
install_requires =
	numpy
	pandas
	pickle
    argparse

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options.package_data]
homework_exercise =
	*.pkl
